kubernetes_dev/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deploy
  labels:
    app.kubernetes.io/name: django-app
    app.kubernetes.io/instance: django-app-mini
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: django-app
      app.kubernetes.io/component: django-app-mini
  template:
    metadata:
      labels:
        app.kubernetes.io/name: django-app
        app.kubernetes.io/component: django-app-mini
    spec:
      containers:
        - name: container-django
          image: docker.io/nekto007/django_app:nekto007
          ports:
            - containerPort: 80
