kubernetes_dev/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: edu-mad-jang
  labels:
    app.kubernetes.io/name: django-deployment
spec:
  selector:
    app.kubernetes.io/name: django-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
