kubernetes_dev/django-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app.kubernetes.io/name: django-app
    app.kubernetes.io/component: test
spec:
  rules:
    - host: edu-mad-jang.sirius-k8s.dvmn.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-service
                port:
                  number: 80
